@@ -141,43 +141,43 @@
 
 static int sceneIdx=0;
 static NSString *transitions[] = {
-						@"CCTransitionJumpZoom",
-						@"CCTransitionCrossFade",
-						@"CCTransitionRadialCCW",
-						@"CCTransitionRadialCW",
-						@"TransitionPageForward",
-						@"TransitionPageBackward",
-						@"CCTransitionFadeTR",
-						@"CCTransitionFadeBL",
-						@"CCTransitionFadeUp",
-						@"CCTransitionFadeDown",
-						@"CCTransitionTurnOffTiles",
-						@"CCTransitionSplitRows",
-						@"CCTransitionSplitCols",
-						@"CCTransitionFade",
-						@"FadeWhiteTransition",
-						@"FlipXLeftOver",
-						@"FlipXRightOver",
-						@"FlipYUpOver",
-						@"FlipYDownOver",
-						@"FlipAngularLeftOver",
-						@"FlipAngularRightOver",
-						@"ZoomFlipXLeftOver",
-						@"ZoomFlipXRightOver",
-						@"ZoomFlipYUpOver",
-						@"ZoomFlipYDownOver",
-						@"ZoomFlipAngularLeftOver",
-						@"ZoomFlipAngularRightOver",
-						@"CCTransitionShrinkGrow",
-						@"CCTransitionRotoZoom",
-						@"CCTransitionMoveInL",
-						@"CCTransitionMoveInR",
-						@"CCTransitionMoveInT",
-						@"CCTransitionMoveInB",
-						@"CCTransitionSlideInL",
-						@"CCTransitionSlideInR",
-						@"CCTransitionSlideInT",
-						@"CCTransitionSlideInB",
+	@"CCTransitionJumpZoom",
+	@"CCTransitionCrossFade",
+	@"CCTransitionRadialCCW",
+	@"CCTransitionRadialCW",
+	@"TransitionPageForward",
+	@"TransitionPageBackward",
+	@"CCTransitionFadeTR",
+	@"CCTransitionFadeBL",
+	@"CCTransitionFadeUp",
+	@"CCTransitionFadeDown",
+	@"CCTransitionTurnOffTiles",
+	@"CCTransitionSplitRows",
+	@"CCTransitionSplitCols",
+	@"CCTransitionFade",
+	@"FadeWhiteTransition",
+	@"FlipXLeftOver",
+	@"FlipXRightOver",
+	@"FlipYUpOver",
+	@"FlipYDownOver",
+	@"FlipAngularLeftOver",
+	@"FlipAngularRightOver",
+	@"ZoomFlipXLeftOver",
+	@"ZoomFlipXRightOver",
+	@"ZoomFlipYUpOver",
+	@"ZoomFlipYDownOver",
+	@"ZoomFlipAngularLeftOver",
+	@"ZoomFlipAngularRightOver",
+	@"CCTransitionShrinkGrow",
+	@"CCTransitionRotoZoom",
+	@"CCTransitionMoveInL",
+	@"CCTransitionMoveInR",
+	@"CCTransitionMoveInT",
+	@"CCTransitionMoveInB",
+	@"CCTransitionSlideInL",
+	@"CCTransitionSlideInR",
+	@"CCTransitionSlideInT",
+	@"CCTransitionSlideInB",
 };
 
 Class nextTransition()
